test/typeerrors/Examples/NoInstance2.hs
data A = A
data B = B deriving Show

main = show A
